[tool.poetry]
name = "pyoats"
version = "0.1.0"
description = "Quick and Easy Time Series Outlier Detection"
authors = ["Benjamin Ye <benjamin.ye@georgian.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "oats" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.23.3"
darts = "0.20"
statsmodels = "^0.13.2"
scipy = "^1.9.1"
pyod = "1.0.4"
stumpy = "^1.11.1"
jenkspy = "^0.2.2"
optuna = "^2.10.0"
statsforecast = "^0.7.1"
tensorflow = "^2.9.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
pylint = "^2.15.3"
Sphinx = "^5.2.3"
pydata-sphinx-theme = "^0.10.1"
myst-parser = "^0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
