[tool.poetry]
name = "pyoats"
version = "0.1.3"
description = "Quick and Easy Time Series Outlier Detection"
authors = ["Benjamin Ye <benjamin.ye@georgian.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "oats" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
darts = "0.28.0"
statsmodels = "^0.14.1"
pyod = "1.1.3"
stumpy = "^1.12.0"
jenkspy = "^0.2.4"
optuna = "^2.10.1"
statsforecast = "^1.7.3"
tensorflow = {version = ">=2.15.0", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = ">=2.15.0", markers = "sys_platform == 'darwin'"}
tensorflow-metal = {version = "0.5.0", markers = "sys_platform == 'darwin'"}
lightgbm = "^4.3.0"
numpy = "^1.26.4"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.3.0"
pylint = "^2.17.7"
Sphinx = "^5.3.0"
pydata-sphinx-theme = "^0.10.1"
myst-parser = "^0.18.1"
pillow = "^10.3.0"
idna = "^3.7"
werkzeug = "^3.0.3"
aiohttp = "^3.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
